--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,36 @@
 body{
   background-image:url("the_worg.png");
-  background-repeat: no-repeat;
-  background-size: 100%;
+  background-repeat: repeat;
+  background-size: 120%;
   background-color: darkgreen;
 
 }
 
 .App {
   text-align: center;
-  color:White;
-  font-family:Arial, Helvetica, sans-serif;
-  font-size: 200%;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.glow {
+  font-size: 80px;
+  font-style:oblique;
+  color: #b4b4b4;
+  text-align: center;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 2.5s ease-in-out infinite alternate;
+  animation: glow 2s ease-in-out infinite alternate;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes glow {
   from {
-    transform: rotate(0deg);
+    text-shadow: 0 0 10px #b4b4b4, 0 0 20px #b4b4b4, 0 0 30px #36b500, 0 0 40px #278400, 0 0 50px #1d6200, 0 0 60px #185000, 0 0 70px #0e2e01;
   }
   to {
-    transform: rotate(360deg);
+    text-shadow: 0 0 20px #b4b4b4, 0 0 30px #3fd200, 0 0 40px #3fd200, 0 0 50px #3fd200, 0 0 60px #3fd200, 0 0 70px #3fd200, 0 0 80px #3fd200;
   }
 }
+
+
 
 .Cards{
   display: inline-block;
@@ -58,8 +42,8 @@ body{
   border: none;
   background: url(https://andyhoffman.codes/random-assets/img/slots/repeat.png) transparent 0 0 no-repeat;
   background-size: cover;
-  width: 48px;
-  height: 48px;
+  width: 68px;
+  height: 68px;
   position: absolute;
   cursor: pointer;
   animation: 6s linear infinite spin;
