--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ body{
 
 .Cards{
   display: inline-block;
-  padding: 1%;
+  padding: 0.4%;
 }
 
 #repeatButton {
@@ -44,7 +44,7 @@ body{
   background-size: cover;
   width: 68px;
   height: 68px;
-  position: absolute;
+  position: flex;
   cursor: pointer;
   animation: 6s linear infinite spin;
 }
