--- a/src/App.css
+++ b/src/App.css
@@ -33,8 +33,8 @@ body{
 
 
 .Cards{
-  display: inline-block;
-  padding: 0.4%;
+  display: inline-flex;
+  padding: 1%;
 }
 
 #repeatButton {
@@ -48,3 +48,4 @@ body{
   cursor: pointer;
   animation: 6s linear infinite spin;
 }
+
